syntax = "proto3";

package messages;

service MessageService {
  rpc sendMessage(Message) returns (Message);
  rpc getMessagesByUser(UserId) returns (MessageList);
}

message UserId {
  string id = 1;
}

message Message {
  int32 id = 1;
  string text = 2;
  int32 senderId = 3;
  int32 receiverId = 4;
}

message MessageList {
  repeated Message messages = 1;
}
